--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: "androidx.navigation.safeargs"
 
-apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 29
@@ -73,6 +72,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha06"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation 'com.otaliastudios:cameraview:2.6.0'
+    implementation "org.koin:koin-core:$versions.koin"
+    implementation "org.koin:koin-android:$versions.koin"
+    implementation "org.koin:koin-androidx-viewmodel:$versions.koin"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
