--- a/data/build.gradle
+++ b/data/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-kapt'
 
-apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 28
@@ -25,6 +24,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "SERVER_URL", '"https://applover-login.herokuapp.com/"'
+        }
+        debug {
+            buildConfigField "String", "SERVER_URL", '"https://applover-login.herokuapp.com/"'
         }
     }
 
@@ -36,8 +39,6 @@ dependencies {
     api project(':domain')
 
     api 'com.squareup.retrofit2:retrofit:2.6.1'
-    api 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    api 'com.google.code.gson:gson:2.8.5'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
     api "io.reactivex.rxjava2:rxandroid:2.1.0"
