--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -14,17 +14,13 @@ buildscript {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "com.google.code.gson:gson:2.8.5"
-    implementation 'io.reactivex:rxkotlin:1.0.0'
-
 
     //koin
-    api "org.koin:koin-core:$versions.koin"
-    api "org.koin:koin-android:$versions.koin"
-    api "org.koin:koin-androidx-viewmodel:$versions.koin"
+    api "io.reactivex.rxjava2:rxjava:2.2.2"
+    api 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6"
+    api "com.google.code.gson:gson:2.8.5"
+    api "org.koin:koin-core:$versions.koin"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
