--- a/data/build.gradle
+++ b/data/build.gradle
@@ -11,7 +11,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion "$versions.minSdk"
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
